# agent-tools

./: Cargo.toml  README.md  README.zh.md
.claude/: settings.local.json
.github/workflows/: cargo-publish.yml
crates/agentool/: Cargo.toml
crates/agentool-core/: Cargo.toml
crates/agentool-core/src/: error.rs  lib.rs  tool.rs
crates/agentool/src/: design.rs  fs.rs  git.rs  gui.rs  lib.rs  md.rs  office.rs  search.rs
docs/: README.md  README.zh.md
src/: code.rs  error.rs  interact.rs  lib.rs  memory.rs  tool.rs  web.rs
src/browser/: README.md  README.zh.md  mod.rs
src/code/: README.md  README.zh.md
src/core/: atomic.rs  blocking.rs  json.rs  mod.rs  path.rs
src/design/: README.md  README.zh.md
src/exec/: README.md  README.zh.md  mod.rs
src/find/: README.md  README.zh.md  error.rs  mod.rs  ops.rs  path.rs  tools.rs
src/fs/: README.md  README.zh.md  error.rs  error_map.rs  mod.rs  ops.rs  path_policy.rs  tools.rs
src/git/: README.md  README.zh.md  error.rs  mod.rs  ops.rs  tools.rs
src/gui/: README.md  README.zh.md
src/interact/: README.md  README.zh.md  backend.rs  error.rs  mod.rs  ops.rs  tools.rs
src/interact/backends/: mod.rs  stub.rs
src/md/: README.md  README.zh.md  error.rs  markdown.rs  mod.rs  ops.rs  tools.rs
src/memory/: README.md  README.zh.md  error.rs  mod.rs  ops.rs  store.rs  tools.rs
src/office/: README.md  README.zh.md
src/task/: README.md  README.zh.md  db.rs  error.rs  mod.rs  ops.rs  schema.rs  tools.rs
src/todo/: README.md  README.zh.md  error.rs  mod.rs  ops.rs  store.rs  tools.rs
src/web/: README.md  README.zh.md  backend.rs  error.rs  html.rs  mod.rs  ops.rs  tools.rs  types.rs
src/web/backends/: direct_fetch.rs  duckduckgo.rs  mod.rs  tavily.rs
