[workspace]
members = [
    "crates/agentool-core",
    "crates/agentool",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Zoranner"]
license = "MIT"
repository = "https://github.com/Zoranner/agent-tools"

[workspace.dependencies]
# 内部包
agentool-core = { path = "crates/agentool-core", version = "0.1.0" }

# 外部依赖
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
git2 = "0.19"
globset = "0.4"
htmd = "0.1"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
