[package]
name = "agentool"
version = "0.1.0"
edition = "2021"
authors = ["Zoranner"]
license = "MIT"
repository = "https://github.com/Zoranner/agent-tools"
description = "A toolkit for document editing agents"

[features]
default = []
fs = []
find = []
web = []
md = []
git = []
memory = []
exec = []
code = []
office = []
browser = []
design = []
gui = []
todo = ["dep:uuid"]
interact = []
full = ["fs", "find", "web", "md", "git", "memory", "exec", "code", "office", "browser", "design", "gui", "todo", "interact"]

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
git2 = "0.19"
globset = "0.4"
htmd = "0.1"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
uuid = { version = "1", features = ["v4"], optional = true }
