[package]
name = "agentool"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A toolkit for document editing agents"

[features]
default = []
fs = []
search = []
web = []
md = []
git = []
memory = []
exec = []
code = []
office = []
browser = []
design = []
gui = []
full = ["fs", "search", "web", "md", "git", "memory", "exec", "code", "office", "browser", "design", "gui"]

[dependencies]
agentool-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
